# task_manage

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: test.yml
task_manage/progress_display/: __init__.py  progress_display.py  progress_json_manage.py  test_code.py
task_manage/progress_display/static/: script.js  styles.css
task_manage/progress_display/templates/: progress_display.html
